# app/Http/Controllers/API/AuthController.php
@@ -3,60 +3,42 @@
 namespace App\Http\Controllers\API;
 
 use App\Http\Controllers\Controller;
+use App\Mail\ConfirmCustomer;
 use App\User;
 use Exception;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\Hash;
+use Illuminate\Support\Facades\Mail;
 use Illuminate\Validation\ValidationException;
 
 class AuthController extends Controller
 {
     /**
-     * @OA\Get(
+     * @OA\Post(
      *      path="/api/login",
      *      operationId="loginUser",
      *      tags={"Auth"},
      *      summary="Logs user into the system",
-     *      @OA\Parameter(
-     *          name="email",
-     *          in="query",
-     *          required=true,
-     *          @OA\Schema(
-     *              type="string",
-     *              format="email"
+     *      @OA\RequestBody(
+     *          @OA\JsonContent(
+     *              @OA\Property(property="email", type="string", format="email", example="admin@gmail.com"),
+     *              @OA\Property(property="password", type="string", format="password", example="admin123"),
      *          )
-     *      ),
-     *      @OA\Parameter(
-     *          name="password",
-     *          in="query",
-     *          required=true,
-     *          @OA\Schema(
-     *              type="string",
-     *              format="password"
-     *          )
-     *      ),
-     *      @OA\Parameter(
-     *          name="device_name",
-     *          in="query",
-     *          @OA\Schema(
-     *              type="string",
-     *          )
+     *
      *      ),
      *      @OA\Response(
      *          response=200,
      *          description="successful operation"
      *       ),
-     *       @OA\Response(response=400, description="Bad request"),
-     *       security={
-     *           {"api_key_security_example": {}}
-     *       }
+     *       @OA\Response(response=400, description="Bad request")
      *     )
      *
      * Returns object
      */
     public function login(Request $request)
     {
+        // return $request->all();
         try {
             $request->validate([
                 'email' => 'email|required',
@@ -89,7 +71,7 @@ class AuthController extends Controller
     }
 
     /**
-     * @OA\Get(
+     * @OA\Post(
      *      path="/api/logout",
      *      operationId="logoutUser",
      *      tags={"Auth"},
@@ -110,5 +92,12 @@ class AuthController extends Controller
     {
         $request->user()->tokens()->delete();
         return response('logout', 201);
+    }
+
+    public function sendMail(Request $request)
+    {
+        // return $request->all();
+        Mail::to($request->email)->send(new ConfirmCustomer($request));
+        return response('Send Mail Success', 200);
     }
 }
